--- a/ETL_EDA/ETL.ipynb
+++ b/ETL_EDA/ETL.ipynb
@@ -15,14 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Guille\\AppData\\Local\\Temp\\ipykernel_23320\\3655691003.py:2: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Guille\\AppData\\Local\\Temp\\ipykernel_23320\\95153632.py:2: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df_movies = pd.read_csv('../Dataset/movies_dataset.csv',delimiter=',')\n"
      ]
     },
@@ -95,34 +95,168 @@
        "      <td>7.7</td>\n",
        "      <td>5415.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>65000000</td>\n",
+       "      <td>[{'id': 12, 'name': 'Adventure'}, {'id': 14, '...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8844</td>\n",
+       "      <td>tt0113497</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Jumanji</td>\n",
+       "      <td>When siblings Judy and Peter discover an encha...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1995-12-15</td>\n",
+       "      <td>262797249.0</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}, {'iso...</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>Roll the dice and unleash the excitement!</td>\n",
+       "      <td>Jumanji</td>\n",
+       "      <td>False</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>2413.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>False</td>\n",
+       "      <td>{'id': 119050, 'name': 'Grumpy Old Men Collect...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[{'id': 10749, 'name': 'Romance'}, {'id': 35, ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>15602</td>\n",
+       "      <td>tt0113228</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Grumpier Old Men</td>\n",
+       "      <td>A family wedding reignites the ancient feud be...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1995-12-22</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>Still Yelling. Still Fighting. Still Ready for...</td>\n",
+       "      <td>Grumpier Old Men</td>\n",
+       "      <td>False</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>92.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>16000000</td>\n",
+       "      <td>[{'id': 35, 'name': 'Comedy'}, {'id': 18, 'nam...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>31357</td>\n",
+       "      <td>tt0114885</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Waiting to Exhale</td>\n",
+       "      <td>Cheated on, mistreated and stepped on, the wom...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1995-12-22</td>\n",
+       "      <td>81452156.0</td>\n",
+       "      <td>127.0</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>Friends are the people who let you be yourself...</td>\n",
+       "      <td>Waiting to Exhale</td>\n",
+       "      <td>False</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>34.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>False</td>\n",
+       "      <td>{'id': 96871, 'name': 'Father of the Bride Col...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[{'id': 35, 'name': 'Comedy'}]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>11862</td>\n",
+       "      <td>tt0113041</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Father of the Bride Part II</td>\n",
+       "      <td>Just when George Banks has recovered from his ...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1995-02-10</td>\n",
+       "      <td>76578911.0</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>Just When His World Is Back To Normal... He's ...</td>\n",
+       "      <td>Father of the Bride Part II</td>\n",
+       "      <td>False</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>173.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 24 columns</p>\n",
+       "<p>5 rows × 24 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "   adult                              belongs_to_collection    budget  \\\n",
        "0  False  {'id': 10194, 'name': 'Toy Story Collection', ...  30000000   \n",
+       "1  False                                                NaN  65000000   \n",
+       "2  False  {'id': 119050, 'name': 'Grumpy Old Men Collect...         0   \n",
+       "3  False                                                NaN  16000000   \n",
+       "4  False  {'id': 96871, 'name': 'Father of the Bride Col...         0   \n",
        "\n",
        "                                              genres  \\\n",
        "0  [{'id': 16, 'name': 'Animation'}, {'id': 35, '...   \n",
+       "1  [{'id': 12, 'name': 'Adventure'}, {'id': 14, '...   \n",
+       "2  [{'id': 10749, 'name': 'Romance'}, {'id': 35, ...   \n",
+       "3  [{'id': 35, 'name': 'Comedy'}, {'id': 18, 'nam...   \n",
+       "4                     [{'id': 35, 'name': 'Comedy'}]   \n",
        "\n",
-       "                               homepage   id    imdb_id original_language  \\\n",
-       "0  http://toystory.disney.com/toy-story  862  tt0114709                en   \n",
+       "                               homepage     id    imdb_id original_language  \\\n",
+       "0  http://toystory.disney.com/toy-story    862  tt0114709                en   \n",
+       "1                                   NaN   8844  tt0113497                en   \n",
+       "2                                   NaN  15602  tt0113228                en   \n",
+       "3                                   NaN  31357  tt0114885                en   \n",
+       "4                                   NaN  11862  tt0113041                en   \n",
        "\n",
-       "  original_title                                           overview  ...  \\\n",
-       "0      Toy Story  Led by Woody, Andy's toys live happily in his ...  ...   \n",
+       "                original_title  \\\n",
+       "0                    Toy Story   \n",
+       "1                      Jumanji   \n",
+       "2             Grumpier Old Men   \n",
+       "3            Waiting to Exhale   \n",
+       "4  Father of the Bride Part II   \n",
        "\n",
-       "  release_date      revenue runtime                          spoken_languages  \\\n",
-       "0   1995-10-30  373554033.0    81.0  [{'iso_639_1': 'en', 'name': 'English'}]   \n",
+       "                                            overview  ... release_date  \\\n",
+       "0  Led by Woody, Andy's toys live happily in his ...  ...   1995-10-30   \n",
+       "1  When siblings Judy and Peter discover an encha...  ...   1995-12-15   \n",
+       "2  A family wedding reignites the ancient feud be...  ...   1995-12-22   \n",
+       "3  Cheated on, mistreated and stepped on, the wom...  ...   1995-12-22   \n",
+       "4  Just when George Banks has recovered from his ...  ...   1995-02-10   \n",
        "\n",
-       "     status  tagline      title  video vote_average vote_count  \n",
-       "0  Released      NaN  Toy Story  False          7.7     5415.0  \n",
+       "       revenue runtime                                   spoken_languages  \\\n",
+       "0  373554033.0    81.0           [{'iso_639_1': 'en', 'name': 'English'}]   \n",
+       "1  262797249.0   104.0  [{'iso_639_1': 'en', 'name': 'English'}, {'iso...   \n",
+       "2          0.0   101.0           [{'iso_639_1': 'en', 'name': 'English'}]   \n",
+       "3   81452156.0   127.0           [{'iso_639_1': 'en', 'name': 'English'}]   \n",
+       "4   76578911.0   106.0           [{'iso_639_1': 'en', 'name': 'English'}]   \n",
        "\n",
-       "[1 rows x 24 columns]"
+       "     status                                            tagline  \\\n",
+       "0  Released                                                NaN   \n",
+       "1  Released          Roll the dice and unleash the excitement!   \n",
+       "2  Released  Still Yelling. Still Fighting. Still Ready for...   \n",
+       "3  Released  Friends are the people who let you be yourself...   \n",
+       "4  Released  Just When His World Is Back To Normal... He's ...   \n",
+       "\n",
+       "                         title  video vote_average vote_count  \n",
+       "0                    Toy Story  False          7.7     5415.0  \n",
+       "1                      Jumanji  False          6.9     2413.0  \n",
+       "2             Grumpier Old Men  False          6.5       92.0  \n",
+       "3            Waiting to Exhale  False          6.1       34.0  \n",
+       "4  Father of the Bride Part II  False          5.7      173.0  \n",
+       "\n",
+       "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,40 +266,65 @@
     "df_movies = pd.read_csv('../Dataset/movies_dataset.csv',delimiter=',')\n",
     "\n",
     "# Muestro la primera fila del dataframe df_movies\n",
-    "df_movies.head(1)"
+    "df_movies.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45466  filas \n",
+      "24  columnas\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_shape = df_movies.shape\n",
+    "print(df_shape[0],' filas ')\n",
+    "print(df_shape[1],' columnas')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "belongs_to_collection    40888\n",
+       "adult                        0\n",
+       "belongs_to_collection    40972\n",
        "budget                       0\n",
-       "genres                    2384\n",
+       "genres                       0\n",
+       "homepage                 37684\n",
+       "id                           0\n",
+       "imdb_id                     17\n",
        "original_language           11\n",
-       "overview                   941\n",
-       "popularity                   0\n",
-       "production_companies     11796\n",
-       "production_countries      6211\n",
-       "release_date                 0\n",
-       "revenue                      0\n",
-       "runtime                    246\n",
-       "spoken_languages          3768\n",
-       "status                      80\n",
-       "tagline                  24978\n",
-       "title                        0\n",
-       "vote_average                 0\n",
-       "vote_count                   0\n",
-       "release_year                 0\n",
-       "return                       0\n",
+       "original_title               0\n",
+       "overview                   954\n",
+       "popularity                   5\n",
+       "poster_path                386\n",
+       "production_companies         3\n",
+       "production_countries         3\n",
+       "release_date                87\n",
+       "revenue                      6\n",
+       "runtime                    263\n",
+       "spoken_languages             6\n",
+       "status                      87\n",
+       "tagline                  25054\n",
+       "title                        6\n",
+       "video                        6\n",
+       "vote_average                 6\n",
+       "vote_count                   6\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,50 +336,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 45466 entries, 0 to 45465\n",
-      "Data columns (total 24 columns):\n",
-      " #   Column                 Non-Null Count  Dtype  \n",
-      "---  ------                 --------------  -----  \n",
-      " 0   adult                  45466 non-null  object \n",
-      " 1   belongs_to_collection  4494 non-null   object \n",
-      " 2   budget                 45466 non-null  object \n",
-      " 3   genres                 45466 non-null  object \n",
-      " 4   homepage               7782 non-null   object \n",
-      " 5   id                     45466 non-null  object \n",
-      " 6   imdb_id                45449 non-null  object \n",
-      " 7   original_language      45455 non-null  object \n",
-      " 8   original_title         45466 non-null  object \n",
-      " 9   overview               44512 non-null  object \n",
-      " 10  popularity             45461 non-null  object \n",
-      " 11  poster_path            45080 non-null  object \n",
-      " 12  production_companies   45463 non-null  object \n",
-      " 13  production_countries   45463 non-null  object \n",
-      " 14  release_date           45379 non-null  object \n",
-      " 15  revenue                45460 non-null  float64\n",
-      " 16  runtime                45203 non-null  float64\n",
-      " 17  spoken_languages       45460 non-null  object \n",
-      " 18  status                 45379 non-null  object \n",
-      " 19  tagline                20412 non-null  object \n",
-      " 20  title                  45460 non-null  object \n",
-      " 21  video                  45460 non-null  object \n",
-      " 22  vote_average           45460 non-null  float64\n",
-      " 23  vote_count             45460 non-null  float64\n",
-      "dtypes: float64(4), object(20)\n",
-      "memory usage: 8.3+ MB\n"
-     ]
+     "data": {
+      "text/plain": [
+       "adult                     object\n",
+       "belongs_to_collection     object\n",
+       "budget                    object\n",
+       "genres                    object\n",
+       "homepage                  object\n",
+       "id                        object\n",
+       "imdb_id                   object\n",
+       "original_language         object\n",
+       "original_title            object\n",
+       "overview                  object\n",
+       "popularity                object\n",
+       "poster_path               object\n",
+       "production_companies      object\n",
+       "production_countries      object\n",
+       "release_date              object\n",
+       "revenue                  float64\n",
+       "runtime                  float64\n",
+       "spoken_languages          object\n",
+       "status                    object\n",
+       "tagline                   object\n",
+       "title                     object\n",
+       "video                     object\n",
+       "vote_average             float64\n",
+       "vote_count               float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Consulto el tipo de dato de cada columna.\n",
-    "df_movies.info()"
+    "df_movies.dtypes"
    ]
   },
   {
@@ -262,9 +418,17 @@
    "source": [
     "# Se crea una variable del tipo lista llamada 'columns' en la cual se carga los nombres de las columnas a tratar en el siguente codigo.\n",
     "columns = ['revenue','budget']\n",
-    "# se utiliza la funcion fillna() para reemplazar los valores nulos por el numero entero 0.\n",
-    "df_movies[columns] = df_movies[columns].fillna(0)\n",
     "\n",
+    "# se utiliza la funcion fillna() para reemplazar los valores nulos por el numero entero 0.\n",
+    "df_movies[columns] = df_movies[columns].fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#df_movies['release_date'] = df_movies['release_date'].fillna('no_release_date')\n",
     "df_movies.dropna(subset=['release_date'], inplace=True)\n",
     "\n",
@@ -274,13 +438,34 @@
     "\n",
     "df_movies['release_date'] = pd.to_datetime(df_movies['release_date'], format='%Y-%m-%d')\n",
     "\n",
-    "df_movies['release_year'] = df_movies['release_date'].dt.year\n",
-    "\n",
+    "df_movies['release_year'] = df_movies['release_date'].dt.year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "list_convert = ['revenue','budget']\n",
-    "df_movies[list_convert] = df_movies[list_convert].astype(float)\n",
-    "\n",
-    "df_movies['return'] = np.where((df_movies['revenue'] != 0) & (df_movies['budget'] != 0), df_movies['revenue'] / df_movies['budget'], 0)\n",
-    "\n",
+    "df_movies[list_convert] = df_movies[list_convert].astype(float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_movies['return'] = np.where((df_movies['revenue'] != 0) & (df_movies['budget'] != 0), df_movies['revenue'] / df_movies['budget'], 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df_movies.drop(['video','imdb_id','adult','original_title','poster_path','homepage'],axis=1,inplace=True)"
    ]
   },
