--- a/ETL_EDA/tests.ipynb
+++ b/ETL_EDA/tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,16 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_movie = pd.read_csv('api.csv')"
+    "df_movie = pd.read_csv('../Data/api.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -56,9 +56,9 @@
        "      <th>vote_count</th>\n",
        "      <th>release_year</th>\n",
        "      <th>return</th>\n",
-       "      <th>day</th>\n",
-       "      <th>actor</th>\n",
-       "      <th>director</th>\n",
+       "      <th>actors</th>\n",
+       "      <th>directors</th>\n",
+       "      <th>release_day</th>\n",
        "      <th>release_month</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -75,9 +75,9 @@
        "      <td>44.0</td>\n",
        "      <td>1988</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>Friday</td>\n",
        "      <td>['Turo Pajala', 'Susanna Haavisto', 'Matti Pel...</td>\n",
        "      <td>['Aki Kaurismäki']</td>\n",
+       "      <td>Friday</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -92,9 +92,9 @@
        "      <td>35.0</td>\n",
        "      <td>1986</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>Thursday</td>\n",
        "      <td>['Matti Pellonpää', 'Kati Outinen', 'Sakari Ku...</td>\n",
        "      <td>['Aki Kaurismäki']</td>\n",
+       "      <td>Thursday</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -109,9 +109,9 @@
        "      <td>539.0</td>\n",
        "      <td>1995</td>\n",
        "      <td>1.075000</td>\n",
-       "      <td>Saturday</td>\n",
        "      <td>['Tim Roth', 'Antonio Banderas', 'Jennifer Bea...</td>\n",
        "      <td>['Allison Anders', 'Alexandre Rockwell', 'Robe...</td>\n",
+       "      <td>Saturday</td>\n",
        "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -126,9 +126,9 @@
        "      <td>79.0</td>\n",
        "      <td>1993</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>Friday</td>\n",
        "      <td>['Emilio Estevez', 'Cuba Gooding Jr.', 'Denis ...</td>\n",
        "      <td>['Stephen Hopkins']</td>\n",
+       "      <td>Friday</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -143,9 +143,9 @@
        "      <td>6778.0</td>\n",
        "      <td>1977</td>\n",
        "      <td>70.490728</td>\n",
-       "      <td>Wednesday</td>\n",
        "      <td>['Mark Hamill', 'Harrison Ford', 'Carrie Fishe...</td>\n",
        "      <td>['George Lucas']</td>\n",
+       "      <td>Wednesday</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -167,22 +167,29 @@
        "3       Judgment Night           6.4        79.0          1993   0.000000   \n",
        "4            Star Wars           8.1      6778.0          1977  70.490728   \n",
        "\n",
-       "         day                                              actor  \\\n",
-       "0     Friday  ['Turo Pajala', 'Susanna Haavisto', 'Matti Pel...   \n",
-       "1   Thursday  ['Matti Pellonpää', 'Kati Outinen', 'Sakari Ku...   \n",
-       "2   Saturday  ['Tim Roth', 'Antonio Banderas', 'Jennifer Bea...   \n",
-       "3     Friday  ['Emilio Estevez', 'Cuba Gooding Jr.', 'Denis ...   \n",
-       "4  Wednesday  ['Mark Hamill', 'Harrison Ford', 'Carrie Fishe...   \n",
+       "                                              actors  \\\n",
+       "0  ['Turo Pajala', 'Susanna Haavisto', 'Matti Pel...   \n",
+       "1  ['Matti Pellonpää', 'Kati Outinen', 'Sakari Ku...   \n",
+       "2  ['Tim Roth', 'Antonio Banderas', 'Jennifer Bea...   \n",
+       "3  ['Emilio Estevez', 'Cuba Gooding Jr.', 'Denis ...   \n",
+       "4  ['Mark Hamill', 'Harrison Ford', 'Carrie Fishe...   \n",
        "\n",
-       "                                            director  release_month  \n",
-       "0                                 ['Aki Kaurismäki']             10  \n",
-       "1                                 ['Aki Kaurismäki']             10  \n",
-       "2  ['Allison Anders', 'Alexandre Rockwell', 'Robe...             12  \n",
-       "3                                ['Stephen Hopkins']             10  \n",
-       "4                                   ['George Lucas']              5  "
+       "                                           directors release_day  \\\n",
+       "0                                 ['Aki Kaurismäki']      Friday   \n",
+       "1                                 ['Aki Kaurismäki']    Thursday   \n",
+       "2  ['Allison Anders', 'Alexandre Rockwell', 'Robe...    Saturday   \n",
+       "3                                ['Stephen Hopkins']      Friday   \n",
+       "4                                   ['George Lucas']   Wednesday   \n",
+       "\n",
+       "   release_month  \n",
+       "0             10  \n",
+       "1             10  \n",
+       "2             12  \n",
+       "3             10  \n",
+       "4              5  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -201,26 +208,33 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 45943 entries, 0 to 45942\n",
-      "Data columns (total 14 columns):\n",
-      " #   Column         Non-Null Count  Dtype  \n",
-      "---  ------         --------------  -----  \n",
-      " 0   budget         45943 non-null  float64\n",
-      " 1   popularity     45943 non-null  float64\n",
-      " 2   release_date   45943 non-null  object \n",
-      " 3   revenue        45943 non-null  float64\n",
-      " 4   status         45863 non-null  object \n",
-      " 5   title          45943 non-null  object \n",
-      " 6   vote_average   45943 non-null  float64\n",
-      " 7   vote_count     45943 non-null  float64\n",
-      " 8   release_year   45943 non-null  int64  \n",
-      " 9   return         45943 non-null  float64\n",
-      " 10  day            45943 non-null  object \n",
-      " 11  actor          43559 non-null  object \n",
-      " 12  director       45943 non-null  object \n",
-      " 13  release_month  45943 non-null  int64  \n",
-      "dtypes: float64(6), int64(2), object(6)\n",
-      "memory usage: 4.9+ MB\n"
+      "RangeIndex: 45451 entries, 0 to 45450\n",
+      "Data columns (total 21 columns):\n",
+      " #   Column                 Non-Null Count  Dtype  \n",
+      "---  ------                 --------------  -----  \n",
+      " 0   belongs_to_collection  4497 non-null   object \n",
+      " 1   budget                 45451 non-null  float64\n",
+      " 2   genres                 43067 non-null  object \n",
+      " 3   original_language      45440 non-null  object \n",
+      " 4   overview               44510 non-null  object \n",
+      " 5   popularity             45451 non-null  float64\n",
+      " 6   production_companies   33634 non-null  object \n",
+      " 7   production_countries   39232 non-null  object \n",
+      " 8   release_date           45451 non-null  object \n",
+      " 9   revenue                45451 non-null  float64\n",
+      " 10  runtime                45205 non-null  float64\n",
+      " 11  spoken_languages       41677 non-null  object \n",
+      " 12  status                 45371 non-null  object \n",
+      " 13  tagline                20425 non-null  object \n",
+      " 14  title                  45451 non-null  object \n",
+      " 15  vote_average           45451 non-null  float64\n",
+      " 16  vote_count             45451 non-null  float64\n",
+      " 17  release_year           45451 non-null  int64  \n",
+      " 18  return                 45451 non-null  float64\n",
+      " 19  actors                 43097 non-null  object \n",
+      " 20  directors              44728 non-null  object \n",
+      "dtypes: float64(7), int64(1), object(13)\n",
+      "memory usage: 7.3+ MB\n"
      ]
     }
    ],
@@ -230,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,11 +253,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cantidad_filmaciones_mes(Mes):\n",
+    "def cantidad_filmaciones_mes(mes:str):\n",
     "    months = {\n",
     "    \"enero\": 1,\n",
     "    \"febrero\":2,\n",
@@ -257,32 +271,40 @@
     "    \"octubre\":10,\n",
     "    \"noviembre\":11,\n",
     "    \"diciembre\":12}\n",
+    "\n",
+    "    if type(mes) != str and mes.lower() not in list(months.keys()):\n",
+    "            return 'Debe ingresar un mes del año ejemplo: enero'\n",
+    "    else:\n",
     "    \n",
-    "    month = months.get(Mes)\n",
+    "        mes = mes.lower()\n",
+    "        \n",
+    "        month = months.get(mes)\n",
     "\n",
-    "    resp = df_movie[(df_movie['status'] == 'Released') & (df_movie['release_month'] == month)]['release_month'].count()\n",
+    "        resp = df_movie[(df_movie['status'] == 'Released') & (df_movie['release_month'] == month)]['release_month'].count()\n",
     "\n",
-    "    return {'mes':Mes, 'cantidad':str(resp)}"
+    "        return {'mes':mes, 'cantidad':str(resp)}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'mes': 'julio', 'cantidad': 2666}"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'int' object has no attribute 'lower'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mh:\\Repositorios\\repositorio-henry\\Api_proyect\\ETL_EDA\\tests.ipynb Cell 7\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/h%3A/Repositorios/repositorio-henry/Api_proyect/ETL_EDA/tests.ipynb#W6sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m cantidad_filmaciones_mes(\u001b[39m123\u001b[39;49m)\n",
+      "\u001b[1;32mh:\\Repositorios\\repositorio-henry\\Api_proyect\\ETL_EDA\\tests.ipynb Cell 7\u001b[0m in \u001b[0;36mcantidad_filmaciones_mes\u001b[1;34m(mes)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/h%3A/Repositorios/repositorio-henry/Api_proyect/ETL_EDA/tests.ipynb#W6sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcantidad_filmaciones_mes\u001b[39m(mes:\u001b[39mstr\u001b[39m):\n\u001b[0;32m      <a href='vscode-notebook-cell:/h%3A/Repositorios/repositorio-henry/Api_proyect/ETL_EDA/tests.ipynb#W6sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     months \u001b[39m=\u001b[39m {\n\u001b[0;32m      <a href='vscode-notebook-cell:/h%3A/Repositorios/repositorio-henry/Api_proyect/ETL_EDA/tests.ipynb#W6sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39menero\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m1\u001b[39m,\n\u001b[0;32m      <a href='vscode-notebook-cell:/h%3A/Repositorios/repositorio-henry/Api_proyect/ETL_EDA/tests.ipynb#W6sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mfebrero\u001b[39m\u001b[39m\"\u001b[39m:\u001b[39m2\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/h%3A/Repositorios/repositorio-henry/Api_proyect/ETL_EDA/tests.ipynb#W6sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mnoviembre\u001b[39m\u001b[39m\"\u001b[39m:\u001b[39m11\u001b[39m,\n\u001b[0;32m     <a href='vscode-notebook-cell:/h%3A/Repositorios/repositorio-henry/Api_proyect/ETL_EDA/tests.ipynb#W6sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mdiciembre\u001b[39m\u001b[39m\"\u001b[39m:\u001b[39m12\u001b[39m}\n\u001b[1;32m---> <a href='vscode-notebook-cell:/h%3A/Repositorios/repositorio-henry/Api_proyect/ETL_EDA/tests.ipynb#W6sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mtype\u001b[39m(mes) \u001b[39m!=\u001b[39m \u001b[39mstr\u001b[39m \u001b[39mand\u001b[39;00m mes\u001b[39m.\u001b[39;49mlower() \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mlist\u001b[39m(months\u001b[39m.\u001b[39mkeys()):\n\u001b[0;32m     <a href='vscode-notebook-cell:/h%3A/Repositorios/repositorio-henry/Api_proyect/ETL_EDA/tests.ipynb#W6sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m             \u001b[39mreturn\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39mDebe ingresar un mes del año ejemplo: enero\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/h%3A/Repositorios/repositorio-henry/Api_proyect/ETL_EDA/tests.ipynb#W6sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m     \u001b[39melse\u001b[39;00m:\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'int' object has no attribute 'lower'"
+     ]
     }
    ],
    "source": [
-    "cantidad_filmaciones_mes('julio')"
+    "cantidad_filmaciones_mes(123)"
    ]
   },
   {
