--- a/ETL_EDA/tests.ipynb
+++ b/ETL_EDA/tests.ipynb
@@ -2,41 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "from datetime import datetime\n",
-    "import json"
+    "import pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_movie = pd.read_json('../Data/api.json')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 174,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('../Data/list_actors.txt', 'r') as file:\n",
-    "    list_actors = json.load(file)\n",
+    "with open('../Data/list_actors.pickle', 'rb') as archivo:\n",
+    "    list_actors = pickle.load(archivo)\n",
     "\n",
-    "with open('../Data/list_directors.txt', 'r') as file:\n",
-    "    list_directors = json.load(file)"
+    "with open('../Data/list_directors.pickle', 'rb') as archivo:\n",
+    "    list_directors = pickle.load(archivo)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../Data/api.pickle', 'rb') as archivo:\n",
+    "    df_movie = pickle.load(archivo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -75,18 +76,35 @@
        "      <th>release_day</th>\n",
        "      <th>release_month</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IdMovie</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
        "      <td>3.860491</td>\n",
-       "      <td>593395200000</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1988-10-21</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>Released</td>\n",
        "      <td>Ariel</td>\n",
        "      <td>7.1</td>\n",
-       "      <td>44</td>\n",
+       "      <td>44.0</td>\n",
        "      <td>1988</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>[Turo Pajala, Susanna Haavisto, Matti Pellonpä...</td>\n",
@@ -95,15 +113,15 @@
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
        "      <td>2.292110</td>\n",
-       "      <td>529804800000</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1986-10-16</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>Released</td>\n",
        "      <td>Shadows in Paradise</td>\n",
        "      <td>7.1</td>\n",
-       "      <td>35</td>\n",
+       "      <td>35.0</td>\n",
        "      <td>1986</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>[Matti Pellonpää, Kati Outinen, Sakari Kuosman...</td>\n",
@@ -112,15 +130,15 @@
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4000000</td>\n",
+       "      <th>5</th>\n",
+       "      <td>4000000.0</td>\n",
        "      <td>9.026586</td>\n",
-       "      <td>818467200000</td>\n",
-       "      <td>4300000</td>\n",
+       "      <td>1995-12-09</td>\n",
+       "      <td>4300000.0</td>\n",
        "      <td>Released</td>\n",
        "      <td>Four Rooms</td>\n",
        "      <td>6.5</td>\n",
-       "      <td>539</td>\n",
+       "      <td>539.0</td>\n",
        "      <td>1995</td>\n",
        "      <td>1.075000</td>\n",
        "      <td>[Tim Roth, Antonio Banderas, Jennifer Beals, M...</td>\n",
@@ -129,15 +147,15 @@
        "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
+       "      <th>6</th>\n",
+       "      <td>0.0</td>\n",
        "      <td>5.538671</td>\n",
-       "      <td>750643200000</td>\n",
-       "      <td>12136938</td>\n",
+       "      <td>1993-10-15</td>\n",
+       "      <td>12136938.0</td>\n",
        "      <td>Released</td>\n",
        "      <td>Judgment Night</td>\n",
        "      <td>6.4</td>\n",
-       "      <td>79</td>\n",
+       "      <td>79.0</td>\n",
        "      <td>1993</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>[Emilio Estevez, Cuba Gooding Jr., Denis Leary...</td>\n",
@@ -146,15 +164,15 @@
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>11000000</td>\n",
+       "      <th>11</th>\n",
+       "      <td>11000000.0</td>\n",
        "      <td>42.149697</td>\n",
-       "      <td>233366400000</td>\n",
-       "      <td>775398007</td>\n",
+       "      <td>1977-05-25</td>\n",
+       "      <td>775398007.0</td>\n",
        "      <td>Released</td>\n",
        "      <td>Star Wars</td>\n",
        "      <td>8.1</td>\n",
-       "      <td>6778</td>\n",
+       "      <td>6778.0</td>\n",
        "      <td>1977</td>\n",
        "      <td>70.490728</td>\n",
        "      <td>[Mark Hamill, Harrison Ford, Carrie Fisher, Pe...</td>\n",
@@ -167,43 +185,48 @@
        "</div>"
       ],
       "text/plain": [
-       "     budget  popularity  release_date    revenue    status  \\\n",
-       "0         0    3.860491  593395200000          0  Released   \n",
-       "1         0    2.292110  529804800000          0  Released   \n",
-       "2   4000000    9.026586  818467200000    4300000  Released   \n",
-       "3         0    5.538671  750643200000   12136938  Released   \n",
-       "4  11000000   42.149697  233366400000  775398007  Released   \n",
+       "             budget  popularity release_date      revenue    status  \\\n",
+       "IdMovie                                                               \n",
+       "2               0.0    3.860491   1988-10-21          0.0  Released   \n",
+       "3               0.0    2.292110   1986-10-16          0.0  Released   \n",
+       "5         4000000.0    9.026586   1995-12-09    4300000.0  Released   \n",
+       "6               0.0    5.538671   1993-10-15   12136938.0  Released   \n",
+       "11       11000000.0   42.149697   1977-05-25  775398007.0  Released   \n",
        "\n",
-       "                 title  vote_average  vote_count  release_year     return  \\\n",
-       "0                Ariel           7.1          44          1988   0.000000   \n",
-       "1  Shadows in Paradise           7.1          35          1986   0.000000   \n",
-       "2           Four Rooms           6.5         539          1995   1.075000   \n",
-       "3       Judgment Night           6.4          79          1993   0.000000   \n",
-       "4            Star Wars           8.1        6778          1977  70.490728   \n",
+       "                       title  vote_average  vote_count  release_year  \\\n",
+       "IdMovie                                                                \n",
+       "2                      Ariel           7.1        44.0          1988   \n",
+       "3        Shadows in Paradise           7.1        35.0          1986   \n",
+       "5                 Four Rooms           6.5       539.0          1995   \n",
+       "6             Judgment Night           6.4        79.0          1993   \n",
+       "11                 Star Wars           8.1      6778.0          1977   \n",
        "\n",
-       "                                              actors  \\\n",
-       "0  [Turo Pajala, Susanna Haavisto, Matti Pellonpä...   \n",
-       "1  [Matti Pellonpää, Kati Outinen, Sakari Kuosman...   \n",
-       "2  [Tim Roth, Antonio Banderas, Jennifer Beals, M...   \n",
-       "3  [Emilio Estevez, Cuba Gooding Jr., Denis Leary...   \n",
-       "4  [Mark Hamill, Harrison Ford, Carrie Fisher, Pe...   \n",
+       "            return                                             actors  \\\n",
+       "IdMovie                                                                 \n",
+       "2         0.000000  [Turo Pajala, Susanna Haavisto, Matti Pellonpä...   \n",
+       "3         0.000000  [Matti Pellonpää, Kati Outinen, Sakari Kuosman...   \n",
+       "5         1.075000  [Tim Roth, Antonio Banderas, Jennifer Beals, M...   \n",
+       "6         0.000000  [Emilio Estevez, Cuba Gooding Jr., Denis Leary...   \n",
+       "11       70.490728  [Mark Hamill, Harrison Ford, Carrie Fisher, Pe...   \n",
        "\n",
-       "                                           directors release_day  \\\n",
-       "0                                   [Aki Kaurismäki]      Friday   \n",
-       "1                                   [Aki Kaurismäki]    Thursday   \n",
-       "2  [Allison Anders, Alexandre Rockwell, Robert Ro...    Saturday   \n",
-       "3                                  [Stephen Hopkins]      Friday   \n",
-       "4                                     [George Lucas]   Wednesday   \n",
+       "                                                 directors release_day  \\\n",
+       "IdMovie                                                                  \n",
+       "2                                         [Aki Kaurismäki]      Friday   \n",
+       "3                                         [Aki Kaurismäki]    Thursday   \n",
+       "5        [Allison Anders, Alexandre Rockwell, Robert Ro...    Saturday   \n",
+       "6                                        [Stephen Hopkins]      Friday   \n",
+       "11                                          [George Lucas]   Wednesday   \n",
        "\n",
-       "   release_month  \n",
-       "0             10  \n",
-       "1             10  \n",
-       "2             12  \n",
-       "3             10  \n",
-       "4              5  "
+       "         release_month  \n",
+       "IdMovie                 \n",
+       "2                   10  \n",
+       "3                   10  \n",
+       "5                   12  \n",
+       "6                   10  \n",
+       "11                   5  "
       ]
      },
-     "execution_count": 175,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,30 +237,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "budget             int64\n",
-       "popularity       float64\n",
-       "release_date       int64\n",
-       "revenue            int64\n",
-       "status            object\n",
-       "title             object\n",
-       "vote_average     float64\n",
-       "vote_count         int64\n",
-       "release_year       int64\n",
-       "return           float64\n",
-       "actors            object\n",
-       "directors         object\n",
-       "release_day       object\n",
-       "release_month      int64\n",
+       "budget                  float64\n",
+       "popularity              float64\n",
+       "release_date     datetime64[ns]\n",
+       "revenue                 float64\n",
+       "status                   object\n",
+       "title                    object\n",
+       "vote_average            float64\n",
+       "vote_count              float64\n",
+       "release_year              int64\n",
+       "return                  float64\n",
+       "actors                   object\n",
+       "directors                object\n",
+       "release_day              object\n",
+       "release_month             int64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +294,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,16 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_movie['release_date'] = pd.to_datetime(df_movie['release_date'], format='%Y-%m-%d')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
