--- a/tests.ipynb
+++ b/tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,20 +18,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../Data/list_actors.pickle', 'rb') as archivo:\n",
+    "with open('./Data/list_actors.pickle', 'rb') as archivo:\n",
     "    list_actors = pickle.load(archivo)\n",
     "\n",
-    "with open('../Data/list_directors.pickle', 'rb') as archivo:\n",
+    "with open('./Data/list_directors.pickle', 'rb') as archivo:\n",
     "    list_directors = pickle.load(archivo)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../Data/api.pickle', 'rb') as archivo:\n",
+    "with open('./Data/api.pickle', 'rb') as archivo:\n",
     "    df_movie = pickle.load(archivo)"
    ]
   },
