--- a/ETL_EDA/ETL.ipynb
+++ b/ETL_EDA/ETL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,7 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import pickle\n",
+    "import json\n",
     "sns.set()"
    ]
   },
@@ -2553,7 +2554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2566,14 +2567,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../Data/list_actors.pickle', 'wb') as archivo:\n",
+    "with open('../Data/list_actors37.pickle', 'wb') as archivo:\n",
     "    pickle.dump(list_actors, archivo)\n",
     "\n",
-    "with open('../Data/list_directors.pickle', 'wb') as archivo:\n",
+    "with open('../Data/list_directors37.pickle', 'wb') as archivo:\n",
     "    pickle.dump(list_directors, archivo)"
    ]
   },
@@ -2592,11 +2593,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_movies = pd.read_pickle('../Data/api.pickle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_movies.to_pickle('../Data/api37.pickle')"
    ]
   },
   {
