--- a/ETL_EDA/ETL.ipynb
+++ b/ETL_EDA/ETL.ipynb
@@ -1914,13 +1914,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_movies.to_csv('../Data/api.csv', index=False)\n",
     "df_movies.to_json('../Data/api.json', orient='records')\n",
     "df_movies.to_pickle('../Data/api.pickle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('archivo.pickle', 'wb') as archivo:\n",
+    "    pickle.dump(objeto, archivo, protocol=4)"
    ]
   },
   {
