--- a/ETL_EDA/ETL.ipynb
+++ b/ETL_EDA/ETL.ipynb
@@ -1929,8 +1929,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('archivo.pickle', 'wb') as archivo:\n",
-    "    pickle.dump(objeto, archivo, protocol=4)"
+    "with open('../Data/api37.pickle', 'wb') as archivo:\n",
+    "    pickle.dump(df_movies, archivo, protocol=4)"
    ]
   },
   {
@@ -2571,7 +2571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2584,15 +2584,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('../Data/list_actors37.pickle', 'wb') as archivo:\n",
-    "    pickle.dump(list_actors, archivo)\n",
+    "    pickle.dump(list_actors, archivo, protocol=4)\n",
     "\n",
     "with open('../Data/list_directors37.pickle', 'wb') as archivo:\n",
-    "    pickle.dump(list_directors, archivo)"
+    "    pickle.dump(list_directors, archivo, protocol=4)"
    ]
   },
   {
