--- a/tests_main.ipynb
+++ b/tests_main.ipynb
@@ -801,21 +801,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_actor(nombre_actor:str):\n",
     "    if not isinstance(nombre_actor, str):\n",
     "        return 'Debe ingresar un texto'\n",
-    "    elif nombre_actor not in list_actors:\n",
+    "    \n",
+    "    elif not any(nombre_actor in sublist for sublist in df_movie['actors'] if sublist):\n",
     "        return 'El actor no se encuentra en la base de datos'\n",
     "\n",
     "    _return = 0\n",
     "    n_films = 0\n",
     "    avg = 0\n",
     "    for index,lista in enumerate(df_movie['actors']):\n",
-    "        if type(lista) == list: \n",
+    "        if type(lista) == list and lista: \n",
     "            if nombre_actor in lista:\n",
     "                n_films += 1\n",
     "                _return += df_movie['return'][index]\n",
@@ -830,25 +831,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "for a in df_movie['actors']:\n",
+    "    if a:\n",
+    "        for i in a:\n",
+    "            if i == 'Tim Roth':\n",
+    "                count+=1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'actor': 'Tim Roth',\n",
-       " 'cantidad_filmaciones': 60,\n",
-       " 'retorno_total': 59.652523166146054,\n",
-       " 'retorno_promedio': 0.9942087194357676}"
+       " 'cantidad_filmaciones': 0,\n",
+       " 'retorno_total': 0,\n",
+       " 'retorno_promedio': 0}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "get_actor('Tim Roth')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_movie[df_movie['actors']]"
    ]
   },
   {
