--- a/tests_main.ipynb
+++ b/tests_main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,6 @@
        "      <th>popularity</th>\n",
        "      <th>release_date</th>\n",
        "      <th>revenue</th>\n",
-       "      <th>status</th>\n",
        "      <th>title</th>\n",
        "      <th>vote_average</th>\n",
        "      <th>vote_count</th>\n",
@@ -84,7 +83,6 @@
        "      <td>3.860491</td>\n",
        "      <td>1988-10-21</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>Released</td>\n",
        "      <td>Ariel</td>\n",
        "      <td>7.1</td>\n",
        "      <td>44.0</td>\n",
@@ -101,7 +99,6 @@
        "      <td>2.292110</td>\n",
        "      <td>1986-10-16</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>Released</td>\n",
        "      <td>Shadows in Paradise</td>\n",
        "      <td>7.1</td>\n",
        "      <td>35.0</td>\n",
@@ -118,7 +115,6 @@
        "      <td>9.026586</td>\n",
        "      <td>1995-12-09</td>\n",
        "      <td>4300000.0</td>\n",
-       "      <td>Released</td>\n",
        "      <td>Four Rooms</td>\n",
        "      <td>6.5</td>\n",
        "      <td>539.0</td>\n",
@@ -135,7 +131,6 @@
        "      <td>5.538671</td>\n",
        "      <td>1993-10-15</td>\n",
        "      <td>12136938.0</td>\n",
-       "      <td>Released</td>\n",
        "      <td>Judgment Night</td>\n",
        "      <td>6.4</td>\n",
        "      <td>79.0</td>\n",
@@ -152,7 +147,6 @@
        "      <td>42.149697</td>\n",
        "      <td>1977-05-25</td>\n",
        "      <td>775398007.0</td>\n",
-       "      <td>Released</td>\n",
        "      <td>Star Wars</td>\n",
        "      <td>8.1</td>\n",
        "      <td>6778.0</td>\n",
@@ -168,19 +162,19 @@
        "</div>"
       ],
       "text/plain": [
-       "       budget  popularity release_date      revenue    status  \\\n",
-       "0         0.0    3.860491   1988-10-21          0.0  Released   \n",
-       "1         0.0    2.292110   1986-10-16          0.0  Released   \n",
-       "2   4000000.0    9.026586   1995-12-09    4300000.0  Released   \n",
-       "3         0.0    5.538671   1993-10-15   12136938.0  Released   \n",
-       "4  11000000.0   42.149697   1977-05-25  775398007.0  Released   \n",
+       "       budget  popularity release_date      revenue                title  \\\n",
+       "0         0.0    3.860491   1988-10-21          0.0                Ariel   \n",
+       "1         0.0    2.292110   1986-10-16          0.0  Shadows in Paradise   \n",
+       "2   4000000.0    9.026586   1995-12-09    4300000.0           Four Rooms   \n",
+       "3         0.0    5.538671   1993-10-15   12136938.0       Judgment Night   \n",
+       "4  11000000.0   42.149697   1977-05-25  775398007.0            Star Wars   \n",
        "\n",
-       "                 title  vote_average  vote_count  release_year     return  \\\n",
-       "0                Ariel           7.1        44.0          1988   0.000000   \n",
-       "1  Shadows in Paradise           7.1        35.0          1986   0.000000   \n",
-       "2           Four Rooms           6.5       539.0          1995   1.075000   \n",
-       "3       Judgment Night           6.4        79.0          1993   0.000000   \n",
-       "4            Star Wars           8.1      6778.0          1977  70.490728   \n",
+       "   vote_average  vote_count  release_year     return  \\\n",
+       "0           7.1        44.0          1988   0.000000   \n",
+       "1           7.1        35.0          1986   0.000000   \n",
+       "2           6.5       539.0          1995   1.075000   \n",
+       "3           6.4        79.0          1993   0.000000   \n",
+       "4           8.1      6778.0          1977  70.490728   \n",
        "\n",
        "                                              actors  \\\n",
        "0  [Turo Pajala, Susanna Haavisto, Matti Pellonpä...   \n",
@@ -204,7 +198,7 @@
        "4              5  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +219,6 @@
        "popularity              float64\n",
        "release_date     datetime64[ns]\n",
        "revenue                 float64\n",
-       "status                   object\n",
        "title                    object\n",
        "vote_average            float64\n",
        "vote_count              float64\n",
@@ -238,7 +231,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,13 +603,13 @@
     "    else:\n",
     "        mes = mes.lower()\n",
     "        month = months[mes]\n",
-    "        resp = df_movie[(df_movie['status'] == 'Released') & (df_movie['release_month'] == month)]['release_month'].count()\n",
+    "        resp = df_movie[(df_movie['release_month'] == month)]['release_month'].count()\n",
     "        return {'mes': mes, 'cantidad': str(resp)}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,13 +677,13 @@
     "    else:\n",
     "        dia = dia.lower()\n",
     "        day = days[dia]\n",
-    "        resp = df_movie[(df_movie['status'] == 'Released') & (df_movie['release_day'] == day)]['release_day'].count()\n",
+    "        resp = df_movie[(df_movie['release_day'] == day)]['release_day'].count()\n",
     "        return {'dia':dia, 'cantidad':resp}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +783,7 @@
        "'La pelicula no se encuentra en la base de datos'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,10 +809,10 @@
     "    n_films = 0\n",
     "    avg = 0\n",
     "    for index,lista in enumerate(df_movie['actors']):\n",
-    "        if type(lista) == list and lista: \n",
+    "        if lista: \n",
     "            if nombre_actor in lista:\n",
     "                n_films += 1\n",
-    "                _return += df_movie['return'][index]\n",
+    "                _return += df_movie['return'].iloc[index]\n",
     "    \n",
     "    if _return == 0 and n_films == 0:\n",
     "        avg = 0\n",
@@ -831,69 +824,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "60\n"
-     ]
-    }
-   ],
-   "source": [
-    "count = 0\n",
-    "for a in df_movie['actors']:\n",
-    "    if a:\n",
-    "        for i in a:\n",
-    "            if i == 'Tim Roth':\n",
-    "                count+=1\n",
-    "print(count)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'actor': 'Tim Roth',\n",
-       " 'cantidad_filmaciones': 0,\n",
-       " 'retorno_total': 0,\n",
-       " 'retorno_promedio': 0}"
+       "'El actor no se encuentra en la base de datos'"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_actor('Tim Roth')"
+    "get_actor('sdfsd')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_movie[df_movie['actors']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_director(nombre_director:str):\n",
     "    if not isinstance(nombre_director, str):\n",
     "        return 'Debe ingresar un texto'\n",
-    "    elif nombre_director not in list_directors:\n",
+    "    elif not any(nombre_director in sublist for sublist in df_movie['directors'] if sublist):\n",
     "        return 'El director no se encuentra en la base de datos'\n",
     "\n",
     "    total_return = 0\n",
@@ -903,7 +861,7 @@
     "    budget = []\n",
     "    revenue = []\n",
     "    for index,lista in enumerate(df_movie['directors']):\n",
-    "        if type(lista) == list:\n",
+    "        if lista:\n",
     "            if nombre_director in lista:\n",
     "                total_return += df_movie['return'][index]\n",
     "                movies.append(df_movie['title'][index])\n",
@@ -919,14 +877,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'director': 'Aki Kaurismäki',\n",
-       " 'retorno_total_director': 1.1703028985507247,\n",
+       " 'retorno_total_director': 3.079139631884058,\n",
        " 'peliculas': ['Ariel',\n",
        "  'Shadows in Paradise',\n",
        "  'Lights in the Dusk',\n",
@@ -938,19 +896,19 @@
        "  'Visions of Europe',\n",
        "  'Leningrad Cowboys Go America',\n",
        "  'Ten Minutes Older: The Trumpet',\n",
-       "  'La Vie de Bohème',\n",
-       "  'Leningrad Cowboys Meet Moses',\n",
-       "  'To Each His Own Cinema',\n",
-       "  'Juha',\n",
-       "  'Take Care of Your Scarf, Tatiana',\n",
-       "  'Calamari Union',\n",
-       "  'Rocky VI',\n",
-       "  'Le Havre',\n",
-       "  'Crime and Punishment',\n",
-       "  'The Saimaa Gesture',\n",
-       "  'Dirty Hands',\n",
-       "  'Thru the Wire',\n",
-       "  'The Other Side of Hope'],\n",
+       "  'Chloe',\n",
+       "  'An Unreasonable Man',\n",
+       "  'More',\n",
+       "  'Blood Out',\n",
+       "  'The Mask',\n",
+       "  \"Saimir's decision\",\n",
+       "  'Mr. & Mrs. Incredible',\n",
+       "  'Safe',\n",
+       "  'Hansel and Gretel',\n",
+       "  'Fire-Eater',\n",
+       "  'The Wait',\n",
+       "  'Running Wild',\n",
+       "  'Justin Timberlake + The Tennessee Kids'],\n",
        " 'año': [1988,\n",
        "  1986,\n",
        "  2006,\n",
@@ -962,19 +920,19 @@
        "  2004,\n",
        "  1989,\n",
        "  2002,\n",
-       "  1992,\n",
-       "  1994,\n",
+       "  2009,\n",
        "  2007,\n",
-       "  1999,\n",
-       "  1994,\n",
-       "  1985,\n",
-       "  1986,\n",
+       "  1998,\n",
        "  2011,\n",
-       "  1983,\n",
-       "  1981,\n",
-       "  1989,\n",
-       "  1987,\n",
-       "  2017],\n",
+       "  1961,\n",
+       "  2004,\n",
+       "  2011,\n",
+       "  2012,\n",
+       "  1988,\n",
+       "  1998,\n",
+       "  2013,\n",
+       "  1995,\n",
+       "  2016],\n",
        " 'retorno_pelicula': [0.0,\n",
        "  0.0,\n",
        "  1.1703028985507247,\n",
@@ -986,14 +944,14 @@
        "  0.0,\n",
        "  0.0,\n",
        "  0.0,\n",
+       "  0.5639638666666666,\n",
        "  0.0,\n",
        "  0.0,\n",
        "  0.0,\n",
        "  0.0,\n",
        "  0.0,\n",
        "  0.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
+       "  1.3448728666666667,\n",
        "  0.0,\n",
        "  0.0,\n",
        "  0.0,\n",
@@ -1010,14 +968,14 @@
        "  2000000.0,\n",
        "  0.0,\n",
        "  0.0,\n",
+       "  15000000.0,\n",
        "  0.0,\n",
        "  0.0,\n",
        "  0.0,\n",
-       "  1000000.0,\n",
        "  0.0,\n",
        "  0.0,\n",
        "  0.0,\n",
-       "  3850000.0,\n",
+       "  30000000.0,\n",
        "  0.0,\n",
        "  0.0,\n",
        "  0.0,\n",
@@ -1034,14 +992,14 @@
        "  0.0,\n",
        "  0.0,\n",
        "  0.0,\n",
+       "  8459458.0,\n",
        "  0.0,\n",
        "  0.0,\n",
        "  0.0,\n",
        "  0.0,\n",
        "  0.0,\n",
        "  0.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
+       "  40346186.0,\n",
        "  0.0,\n",
        "  0.0,\n",
        "  0.0,\n",
@@ -1049,7 +1007,7 @@
        "  0.0]}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1081,22 +1039,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'La pelicula no se encuentra en la base de datos'"
+       "{'lista recomendada': \"['Un marido de ida y vuelta', 'The Sandwich Man', 'Chernobyl Diaries', 'Friday the 13th: A New Beginning', 'Aftershock']\"}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "recomendacion(\"sdfds\")"
+    "recomendacion(\"Manuel on the Island of Wonders\")"
    ]
   }
  ],
